# dotscope

./: .dotscopeignore  .gitattributes  .gitignore  .mcp.json  .scopes  AGENT_INSTRUCTIONS.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES_v1.2.0.md  bump.py  dump_cs.py  dump_edge_count.py  dump_fs_edge.py  dump_fs_edge2.py  dump_js_params.py  dump_physics.py  dump_physics2.py  dump_physics3.py  dump_shader.py  epic.yaml  f.py  f2.py  f3.py  f4.py  f5.py  f6.py  final_fix.py  find_ids.py  intent.yaml  log.txt  patch_bundle_edges.py  patch_cache.py  patch_hud.py  patch_links.py  patch_stubs.py  patch_task.py  pyproject.toml  remove_logger.py  run_epic.py  (+1 more)
.claude/: settings.local.json
.claude/hooks/: pre-commit-check.sh
.github/workflows/: ci.yml  mcp-boot-gate.yml  python-publish.yml
.virtual/: isolated-hubs.scope
assets/: .scope
assets/ui/: bundle.js  index.html
crates/: .scope
crates/dotscope-core/: Cargo.toml
crates/dotscope-core/src/: ast.rs  daemon.rs  git.rs  graph.rs  ipc.rs  lib.rs  mmap.rs  walk.rs
dist2/: dotscope-1.7.0-cp310-abi3-macosx_11_0_arm64.whl  dotscope-1.7.0-cp310-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
docs/: PHASE_1_REGISTRATION.md  architecture.md  cli-reference.md  how-it-works.md  mcp-integration.md  mcp-setup.md  scope-file.md  trial-pre-registration.json  trial-pre-registration.md  trial-pre-registration.sha256
dotscope/: .scope  __init__.py  _compat.py  absorber.py  assertions.py  ast_analyzer.py  backtest.py  bench.py  budget.py  cache.py  cli.py  composer.py  constants.py  context.py  counterfactual.py  cut_score.py  debug.py  discovery.py  explain.py  formatter.py  graph.py  health.py  help.py  history.py  hooks.py  ignore.py  ingest.py  intent.py  lessons.py  matcher.py  mcp_server.py  models.py  near_miss.py  onboarding.py  orchestrator.py  parser.py  paths.py  progress.py  refresh.py  regression.py  (+12 more)
dotscope/check/: __init__.py  acknowledge.py  checker.py  constraints.py  models.py
dotscope/cli/: .scope  __init__.py  core.py  cut_score.py  hooks.py  ingest.py  observability.py  orchestrator.py  pro.py  serve.py  trial.py
dotscope/engine/: __init__.py  assertions.py  composer.py  constants.py  context.py  discovery.py  ignore.py  parser.py  resolver.py  runtime_overlay.py  scanner.py  search.py  tokens.py  utility.py
dotscope/eval/: .scope  __init__.py  bootstrap.py  compare.py  corpus.py  harness.py  replay.py
dotscope/generate/: .scope  __init__.py  atlas.py  contracts.py  engine.py  models.py  network.py
dotscope/mcp/: .scope  __init__.py  core.py  hooks.py  ingest.py  intents.py  logger.py  middleware.py  mvcc.py  observability.py  pipelines.py
dotscope/merge/: .scope  __init__.py  classifier.py  composer.py  differ.py  driver.py  imports.py  models.py  swarm.py
dotscope/models/: .scope  __init__.py  core.py  eval.py  history.py  intent.py  passes.py  state.py
dotscope/passes/: .scope  __init__.py  ast_analyzer.py  backtest.py  budget_allocator.py  convention_compliance.py  convention_discovery.py  convention_parser.py  graph_builder.py  hint_generator.py  history_miner.py  incremental.py  lazy.py  preflight.py  semantic_diff.py  spatial_autofix.py  virtual.py  voice.py  voice_defaults.py  voice_discovery.py  z3_transpiler.py
dotscope/paths/: .scope  __init__.py  repo.py
dotscope/pro/: __init__.py  _anonymize.py  _cache.py  models.py  remote.py
dotscope/search/: .scope  __init__.py  models.py  (+7 more)
scripts/: probe_sdk.py
tests/: .scope  conftest.py  test_absorber.py  test_ast_analyzer.py  test_atomic_state.py  test_backtest.py  test_budget.py  test_canonical_snippet.py  test_cli.py  test_compat_shims.py  test_composer.py  test_constants.py  test_context.py  test_cut_score.py  test_discovery.py  test_e2e_daemon.py  test_enforcement.py  test_eval_harness.py  test_experience.py  test_explain.py  test_file_lock.py  test_formatter.py  test_graph.py  test_health.py  test_history.py  test_ignore.py  test_ingest.py  test_lang_solidity.py  test_lessons.py  test_line_filter.py  test_loop.py  test_matcher.py  test_mcp_boot_contract.py  test_mcp_config.py  test_mcp_runtime.py  test_mcp_server.py  test_mcp_smoke.py  test_mvcc.py  test_near_miss.py  test_orchestrator.py  (+21 more)
ui/: .scope  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+146 files in other folders)
