[project]
name = "dotscope"
version = "0.1.0"
description = "Agents see files. You see architecture. dotscope gives agents the architecture."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Supremum" }]
keywords = ["ai", "coding", "agents", "context", "scope", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
tokens = ["tiktoken"]
embeddings = ["sentence-transformers"]
search = ["sentence-transformers", "numpy"]
dev = ["pytest", "ruff"]
all = ["dotscope[mcp,tokens,search]"]

[project.scripts]
dotscope = "dotscope.cli:main"
dotscope-mcp = "dotscope.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
