[project]
name = "dotscope"
version = "1.7.3"
description = "Agents see files. You see architecture. dotscope gives agents the architecture."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Supremum" }]
keywords = ["ai", "coding", "agents", "context", "scope", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-solidity>=0.1.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-rust>=0.23.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0,<3"]
tokens = ["tiktoken"]
embeddings = ["sentence-transformers"]
search = ["sentence-transformers", "numpy"]
dev = ["pytest", "ruff"]
all = ["dotscope[mcp,tokens,search]"]

[project.scripts]
dotscope = "dotscope.cli:main"
dotscope-mcp = "dotscope.mcp:main"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "dotscope.dotscope_core"
manifest-path = "crates/dotscope-core/Cargo.toml"
python-source = "."



[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
