[package]
name = "dotscope-core"
version = "1.7.1"
edition = "2021"
publish = false

[lib]
name = "dotscope_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py310"] }
git2 = { version = "0.18.3", default-features = false }
petgraph = "0.6.4"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "~0.22.6"
tree-sitter-python = "=0.21.0"
tree-sitter-javascript = "=0.21.3"
tree-sitter-typescript = "=0.21.1"
tree-sitter-rust = "=0.21.2"
tree-sitter-java = "=0.21.0"
tree-sitter-go = "=0.21.2"
ignore = "0.4.25"
notify = "8.2.0"
memmap2 = "0.9.10"
regex = "1.10"
lazy_static = "1.4"
bloomfilter = "3.0.1"

[[bin]]
name = "dotscope_daemon"
path = "src/bin/daemon.rs"
